<resources>
    <string name="app_name">Week 3–4 Application</string>
    <string name="find_picture">Find picture</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="login">Login</string>
    <string name="main_menu">Main Menu</string>
    <string name="image_view">Image View</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="internet_not_connected">No internet connection</string>
    <string name="map">Map</string>
    <string name="no_map_pos">Select position on map</string>
    <string name="map_search_result">Map search result</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="edit_photo">Edit photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_to_storage">Save to Storage</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="change_theme">Change Theme</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="search_text">Search Text</string>
    <string name="autosearch_notif_description">Auto search photos every x time</string>
    <string name="found">Found</string>
    <string name="photos">photos</string>

    <string-array name="times_spinner">
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>1 day</item>
    </string-array>
</resources>
