<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_baseline_insert_photo_24"
            android:title="@string/main_menu"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/photo" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>