<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.burlakov.week1application.activities.MainFragment"
        android:label="@string/main_menu"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.burlakov.week1application.activities.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.burlakov.week1application.activities.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.burlakov.week1application.activities.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.burlakov.week1application.activities.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.burlakov.week1application.activities.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>